<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DebugMode" Id="{a4474db5-480d-4119-8cca-f2f0a0b6274d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE DebugMode :
(
	Notify,
	Panic
) BYTE;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>